# rust-kafka-consumer-example

./: Cargo.toml  Dockerfile  README.md  check_dynamodb.sh  docker-compose.yaml  post_message_to_kafka.sh
src/: main.rs
